统一图片处理逻辑